# agentic-synth

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .task-prompt.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  REPO_REVIEW.md  eslint.config.js
.github/workflows/: ci.yml
cmake/: ProjectOptions.cmake
design/: PHASES.md  PHASES2.md  REBRAND.md  timbre.icns
docs/: architecture-diagram.html  architecture-option2-diagram.html  architecture-option2.md  architecture-static.html  architecture.html  architecture.md  audio-engine.md  build-release.md  daw-smoke-test.md  getting-started.md  index.md  local-inference.md  mod-matrix-guide.md  privacy-statement.md  timbre-profile-map.md
docs/adr/: ADR-0001-initial-architecture.md  ADR-0002-spsc-patch-queue-contract.md  ADR-0003-pod-patchstruct-as-ipc-kernel.md  ADR-0004-llamacpp-http-only-integration.md  ADR-0005-juce8-webview-bundled-react-ui.md  ADR-0006-single-box-default-two-box-extension.md  ADR-0007-option2-local-audio-generation-model.md  template.md
docs/issues/: ISSUE-001-option2-stale-arch-doc.md  ISSUE-002-option2-no-code-exists.md  ISSUE-003-option2-gpu-architecture.md  ISSUE-004-option2-license-review.md
docs/option2/: architecture-option2.html  build_pdf.py  diagram.mmd  mmdc-config.json
scripts/: download-models.sh  plugin-validation.sh
src/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  main.cpp
src/agent/: AgentBridge.cpp  AgentBridge.h  DictionaryService.cpp  DictionaryService.h  GeminiSTT.cpp  GeminiSTT.h  GenerationService.cpp  GenerationService.h  KnobBridge.cpp  KnobBridge.h  MidiLearnStore.cpp  MidiLearnStore.h  MorphLoop.cpp  MorphLoop.h  MorphTelemetry.cpp  MorphTelemetry.h  ParamMap.cpp  ParamMap.h  PatchAugmenter.cpp  PatchAugmenter.h  PitchDetector.cpp  PitchDetector.h  PrePatchPipeline.cpp  PrePatchPipeline.h  PresetStore.cpp  PresetStore.h  Previews.h  PromptHandler.cpp  PromptHandler.h  SessionMemory.cpp  SessionMemory.h  StreamParser.cpp  StreamParser.h  Telemetry.cpp  Telemetry.h  TelemetryService.h  VariationRecommender.cpp  VariationRecommender.h  WebSocketBridge.cpp  WebSocketBridge.h  (+2 more)
src/cli/: main.cpp
src/engine/: ADSREnvelope.cpp  ADSREnvelope.h  Chorus.cpp  Chorus.h  DCBlocker.h  Delay.cpp  Delay.h  Filter.cpp  Filter.h  HighPassFilter.cpp  HighPassFilter.h  LFO.cpp  LFO.h  MidiHandler.cpp  MidiHandler.h  MorphEngine.cpp  MorphEngine.h  MultiModalInput.cpp  MultiModalInput.h  OfflineRenderer.cpp  OfflineRenderer.h  ParamSmoother.cpp  ParamSmoother.h  PatchStateManager.cpp  PatchStateManager.h  PatchStruct.h  PatchValidator.cpp  PatchValidator.h  PresetDatabase.cpp  PresetDatabase.h  PresetExporter.cpp  PresetExporter.h  RealtimeSafety.h  Reverb.cpp  Reverb.h  SPSCQueue.h  StyleTransfer.cpp  StyleTransfer.h  SynthEngine.cpp  SynthEngine.h  (+10 more)
src/ipc/: CompanionIpcServer.cpp  CompanionIpcServer.h  IpcMessage.h  PluginIpcClient.cpp  PluginIpcClient.h
src/mapper/: ArchetypeLibrary.cpp  ArchetypeLibrary.h  ArchetypeRetriever.cpp  ArchetypeRetriever.h  DeltaNudger.cpp  DeltaNudger.h  EnvLoader.cpp  EnvLoader.h  GeminiSampler.cpp  GeminiSampler.h  GrammarSampler.cpp  GrammarSampler.h  HeuristicParser.cpp  HeuristicParser.h  LlmTelemetry.cpp  LlmTelemetry.h  PromptEnhancer.cpp  PromptEnhancer.h  PromptSanitizer.cpp  PromptSanitizer.h  SemanticMapper.cpp  SemanticMapper.h  UnsafeMode.h  descriptor_dataset.h  enhancer-prompt.md  patch_struct.gbnf  system-prompt.md
src/mapper/archetypes/: acid_303_bass.json  ambient_drone_pad.json  cinematic_kubrick_pad.json  default_init.json  dx7_tine_ep.json  ethereal_choir_pad.json  glass_bell.json  gritty_lead.json  pluck_keys.json  reese_dubstep_bass.json  riser_swell.json  sub_808_bass.json  supersaw_lead.json  vangelis_blade_runner_pad.json  warm_analog_pad.json
src/plugin/: AgenticSynthPlugin.cpp  AgenticSynthPlugin.h  PluginEditor.cpp  PluginEditor.h
src/ui/: WebUiComponent.cpp  WebUiComponent.h
tests/: ADSREnvelopeTest.cpp  AgentBridgeCallbacksTest.cpp  AgentBridgeMidiSinkTest.cpp  ArchetypeLibraryTest.cpp  CMakeLists.txt  ChorusTest.cpp  DelayTest.cpp  DeltaNudgerTest.cpp  DictionaryServiceTest.cpp  FilterTest.cpp  GrammarSamplerTest.cpp  HeuristicParserTest.cpp  LFOTest.cpp  MidiHandlerTest.cpp  MidiLearnStoreTest.cpp  MorphEngineTest.cpp  MorphLoopTest.cpp  MorphTelemetryTest.cpp  MultiModalInputTest.cpp  OfflineRendererTest.cpp  ParamSmootherTest.cpp  PatchAugmenterTest.cpp  PatchStateManagerTest.cpp  PatchValidatorTest.cpp  Phase1AcceptanceTest.cpp  Phase2AcceptanceTest.cpp  Phase3AcceptanceTest.cpp  Phase3FollowupTest.cpp  PitchDetectorTest.cpp  PluginLifecycleTest.cpp  PrePatchTest.cpp  PresetDatabaseTest.cpp  PresetExporterTest.cpp  PresetStoreTest.cpp  PromptEnhancerTest.cpp  RealtimeSafetyTest.cpp  RefinementContextTest.cpp  ReverbTest.cpp  SPSCQueueTest.cpp  SemanticMapperTest.cpp  (+18 more)
ui/: eslint.config.js  index.html  package-lock.json  package.json
ui/public/: pcm-tap.js
ui/src/: App.css  App.tsx  KnobGrid.tsx  SemanticDictionaryEditor.tsx  TelemetryDashboard.tsx  WaveformPreview.tsx
ui/src/components/: ABToggle.css  ABToggle.tsx  AuditionKeyboard.css  AuditionKeyboard.tsx  BootSplash.css  BootSplash.tsx  ChatInterface.css  ChatInterface.tsx  ConfidenceChips.css  ConfidenceChips.tsx  FailureBanner.css  FailureBanner.tsx  HoodSlideOver.css  HoodSlideOver.tsx  KeepThisButton.tsx  Knob.css  Knob.tsx  KnobContextMenu.css  KnobContextMenu.tsx  KnobGrid.tsx  MacroBar.css  MacroBar.tsx  ModConstellation.css  ModConstellation.tsx  ModMatrixPanel.css  ModMatrixPanel.tsx  ModSourcesStrip.css  ModSourcesStrip.tsx  ModulesGrid.css  ModulesGrid.tsx  OnboardingOverlay.css  OnboardingOverlay.tsx  PatchBrowser.css  PatchBrowser.tsx  PatchPreview.css  PatchPreview.tsx  PlaySurface.css  PlaySurface.tsx  PresetList.css  PresetList.tsx  (+22 more)
ui/src/data/: modulation.ts  presets.ts  quickStartPreset.ts  uiAudio.ts
ui/src/hooks/: useABPatch.ts  useColumnLayout.ts  usePatchHistory.ts  (+3 more)
(+1 files in other folders)
